feature: Add xdebug in xhprof images

--- a/php-7.2-fpm-xhprof-alpine/Dockerfile
+++ b/php-7.2-fpm-xhprof-alpine/Dockerfile
@@ -1,14 +1,12 @@
-FROM php:7.2-fpm-alpine
+FROM belingud/develop_image:php-7.2-fpm-xdebug-alpine
 ARG PHP_INI=/usr/local/etc/php/php.ini
 WORKDIR /tmp
-RUN apk --no-cache add libpng libpng-dev && docker-php-ext-install pdo pdo_mysql gd \
-    && curl https://gitee.com/belingud/xhprof/raw/master/extension/Makefile.local > Makefile.local \
+RUN curl https://gitee.com/belingud/xhprof/raw/master/extension/Makefile.local > Makefile.local \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/config.m4 > config.m4 \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/php_xhprof.h > php_xhprof.h \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/trace.h > trace.h \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/config.w32 > config.w32 \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/xhprof.c > xhprof.c \
-    && curl https://gitee.com/belingud/sources/raw/master/php.ini > ${PHP_INI} \
     && apk --no-cache add pcre-dev ${PHPIZE_DEPS} \
     && /usr/local/bin/phpize \
     && ./configure --with-php-config=$(which php-config) \
