--- a/php-7.2-fpm-xhprof-buster/Dockerfile
+++ b/php-7.2-fpm-xhprof-buster/Dockerfile
@@ -1,15 +1,12 @@
-FROM php:7.2-fpm-buster
+FROM belingud/develop_image:php-7.2-fpm-xdebug-buster
 ARG PHP_INI=/usr/local/etc/php/php.ini
 WORKDIR /tmp
-RUN apt-get update && apt-get -y --no-install-recommends install libpng-dev \
-    && docker-php-ext-install pdo pdo_mysql gd \
-    && curl https://gitee.com/belingud/xhprof/raw/master/extension/Makefile.local > Makefile.local \
+RUN curl https://gitee.com/belingud/xhprof/raw/master/extension/Makefile.local > Makefile.local \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/config.m4 > config.m4 \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/php_xhprof.h > php_xhprof.h \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/trace.h > trace.h \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/config.w32 > config.w32 \
     && curl https://gitee.com/belingud/xhprof/raw/master/extension/xhprof.c > xhprof.c \
-    && curl https://gitee.com/belingud/sources/raw/master/php.ini > ${PHP_INI} \
     && /usr/local/bin/phpize \
     && ./configure --with-php-config=$(which php-config) \
     && make && make install \
